--- a/nccd-cw3-arch-starter-20230501T005337Z-001/nccd-cw3-arch-starter/lab.conf
+++ b/nccd-cw3-arch-starter-20230501T005337Z-001/nccd-cw3-arch-starter/lab.conf
@@ -12,47 +12,33 @@ Internet[1]=EXTDNS
 Internet[2]=EXTOFFICE
 Internet[3]=OFFICE
 
-Squid[0]=OFFICE
-Int-DNS[0]=OFFICE
-Int-WWW[0]=OFFICE
-Mail[0]=OFFICE
-OpenVPN[0]=OFFICE
-LDAP[0]=OFFICE
-Staff-1[0]=OFFICE
-Staff-2[0]=OFFICE
-Staff-3[0]=OFFICE
+#SUBNETS
 
+#DMZ subnet 172.16.1.0/21
+switch2[0]=DMZ
+Squid[0]=DMZ
+Int-DNS[0]=DMZ
+Int-WWW[0]=DMZ
+Mail[0]=DMZ
 
-#
-#
-#                                                                    +------------------+
-#                                            +-----------------------+Squid Proxy Server| 80.64.37.201/16
-#                                            |                       +------------------+
-#                                            |    +-------------+
-#           +---------+                      +----+IntDNS Server| 80.64.41.131/16
-#           |ExtOffice|                      |    +-------------+
-#           +----+----+                      |                       +-----------+
-#22.39.224.18/30 |                           +-----------------------+Mail Server| 80.64.139.114/16
-#                |      80.64.157.254/16     |                       +-----------+
-#22.39.224.17/30 |       +                   |    +-------------+
-#           +----+-----+ |                   +----+IntWWW Server| 80.64.98.155/16
-#           |"Internet"+-v-------------------+    +-------------+
-#           +----------+                     |                           +--------------+
-#     8.8.8.1/24|  |201.224.131.22/16        +---------------------------+OpenVPN Server| 80.64.89.215/16
-#               |  |                         |                           +--------------+
-#               |  |                         |    +----------------+
-#               |  |                         +----+Staff Machine #1| 80.64.81.121/16
-#               |  |                         |    +----------------+
-#               |  |                         |                       +----------------+
-#               |  |                         +-----------------------+Staff Machine #2| 80.64.69.201/16
-#     8.8.8.8/24|  |201.224.19.7/16          |                       +----------------+
-#     +------+  |  |   +------+              |    +----------------+
-#     |ExtDNS+--+  +---+ExtWWW|              +----+Staff Machine #3| 80.64.99.159/16
-#     +------+         +------+              |    +----------------+
-#                                            |
-#                                            |      +-----------+
-#                                            +------+LDAP Server| 80.64.34.21/16
-#                                                   +-----------+
-#
-#                                                  Office Internal Network
+#INTERNAL subnet 10.0.0.0/21
+internalRouter[0]=INTERNAL
+Staff-1[0]=INTERNAL
+Staff-2[0]=INTERNAL
+Staff-3[0]=INTERNAL
 
+#SERVER subnet 172.16.0.0/21
+switch3[0]=SERVER
+OpenVPN[0]=SERVER
+LDAP[0]=SERVER
+
+#managment subnet 192.168.0.0/31
+switch4[0]=MANAGEMENT
+admin[0]=MANAGMENT
+
+#Main subnet 10.16.0.0/16
+switch1[1]=X
+switch2[1]=X
+internalRouter[1]=X
+switch3[1]=X
+switch4[1]=X
