added the switches and reconfigured the lab.conf

--- a/nccd-cw3-arch-starter-20230501T005337Z-001/nccd-cw3-arch-starter/lab.conf
+++ b/nccd-cw3-arch-starter-20230501T005337Z-001/nccd-cw3-arch-starter/lab.conf
@@ -22,23 +22,23 @@ Int-WWW[0]=DMZ
 Mail[0]=DMZ
 
 #INTERNAL subnet 10.0.0.0/21
-internalRouter[0]=INTERNAL
+switch3[0]=INTERNAL
 Staff-1[0]=INTERNAL
 Staff-2[0]=INTERNAL
 Staff-3[0]=INTERNAL
 
 #SERVER subnet 172.16.0.0/21
-switch3[0]=SERVER
+switch4[0]=SERVER
 OpenVPN[0]=SERVER
 LDAP[0]=SERVER
 
 #managment subnet 192.168.0.0/31
-switch4[0]=MANAGEMENT
+switch5[0]=MANAGEMENT
 admin[0]=MANAGMENT
 
 #Main subnet 10.16.0.0/16
 switch1[1]=X
 switch2[1]=X
-internalRouter[1]=X
 switch3[1]=X
 switch4[1]=X
+switch5[1]=X
