fixed the subnets mainly the internt to main via switchtointernt subnet to switch1

--- a/nccd-cw3-arch-starter-20230501T005337Z-001/nccd-cw3-arch-starter/lab.conf
+++ b/nccd-cw3-arch-starter-20230501T005337Z-001/nccd-cw3-arch-starter/lab.conf
@@ -3,14 +3,19 @@ LAB_VERSION=2023.rc1
 LAB_AUTHOR="Peter Norris (derived from original materials of James Dorgan)"
 LAB_EMAIL=pn@warwick.ac.uk
 
+#external nodes
 Ext-WWW[0]=EXTWWW
 Ext-DNS[0]=EXTDNS
 Ext-Office[0]=EXTOFFICE
 
+#Internet network
 Internet[0]=EXTWWW
 Internet[1]=EXTDNS
 Internet[2]=EXTOFFICE
-Internet[3]=OFFICE
+
+#internt subnet
+Internet[3]=SWITCH1TOINTERNET
+switch1[0]=SWITCH1TOINTERNET
 
 #SUBNETS
 
@@ -34,11 +39,11 @@ LDAP[0]=SERVER
 
 #managment subnet 192.168.0.0/31
 switch5[0]=MANAGEMENT
-admin[0]=MANAGMENT
+admin[0]=MANAGEMENT
 
 #Main subnet 10.16.0.0/16
-switch1[1]=X
-switch2[1]=X
-switch3[1]=X
-switch4[1]=X
-switch5[1]=X
+switch1[1]=MAIN
+switch2[1]=MAIN
+switch3[1]=MAIN
+switch4[1]=MAIN
+switch5[1]=MAIN
